--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,8 @@ ul#menu-main > li > a:focus {
 
 /* === section header === */
 
+
+
 #header-wrapper {
 	width: 100%;
 	min-height: 600px;
@@ -511,6 +513,34 @@ section.spacer blockquote.large:before {
 
 section.spacer blockquote cite {
 	color:#555;
+}
+.sinput input[type=text], .sinput input[type=submit] {
+	width: 40%;
+	height: 37px;
+	padding: 0.5em;
+	font-size: 1em;
+	
+	margin-bottom: 1.5em;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+
+
+	-webkit-box-sizing: border-box;
+}
+
+
+.sinput input[type=submit] {
+	width: 10%;
+	height: 37px;
+	padding: 0.5em;
+	font-size: 1em;
+	
+	margin-bottom: 1.5em;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+
+
+	-webkit-box-sizing: border-box;
 }
 
 
