--- a/css/formularios.css
+++ b/css/formularios.css
@@ -19,5 +19,39 @@ height: 600px;
 table td {
  padding: 8px 9px; }
 
+.boton {
+  background: #2ed0d9;
+  background-image: -webkit-linear-gradient(top, #2ed0d9, #0988e3);
+  background-image: -moz-linear-gradient(top, #2ed0d9, #0988e3);
+  background-image: -ms-linear-gradient(top, #2ed0d9, #0988e3);
+  background-image: -o-linear-gradient(top, #2ed0d9, #0988e3);
+  background-image: linear-gradient(to bottom, #2ed0d9, #0988e3);
+  -webkit-border-radius: 15;
+  -moz-border-radius: 15;
+  border-radius: 15px;
+  text-shadow: 4px 4px 6px #666666;
+  -webkit-box-shadow: 3px 1px 3px #666666;
+  -moz-box-shadow: 3px 1px 3px #666666;
+  box-shadow: 3px 1px 3px #666666;
+  font-family: Georgia;
+  color: #ffffff;
+  font-size: 17px;
+  padding: 5px 5px 5px 8px;
+  border: solid #449691 3px;
+  text-decoration: none;
+}
 
- 
+.boton:hover {
+  background: #49b1ed;
+  background-image: -webkit-linear-gradient(top, #49b1ed, #74ed82);
+  background-image: -moz-linear-gradient(top, #49b1ed, #74ed82);
+  background-image: -ms-linear-gradient(top, #49b1ed, #74ed82);
+  background-image: -o-linear-gradient(top, #49b1ed, #74ed82);
+  background-image: linear-gradient(to bottom, #49b1ed, #74ed82);
+  text-decoration: none;
+}
+
+.botonera {
+	float: left;
+	position: absolute;
+ }
