Integracion de modulos

--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,7 @@ section.spacer {
 	background:#ffe873;
 }
 .spacer.orange,.section.orange {
-	background:#f36f36;
+	background:#4EB7FD;
 }
 
 section.spacer.bg2 {
